--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -30,7 +30,7 @@ const socials: socialType[] = [
 ];
 ---
 
-<section class="mt-10">
+<section  id="contact" class="mt-10 pt-11 section-glow">
   <h3 class="fade" style="--fade-starter: 90%">Contact - Socials</h3>
   <div class="fs-xs fw-semi-bold flow" style="--flow-spacer: 1rem">
     <div class="flex">
