--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -4,7 +4,7 @@ import { getCollection, getEntry } from "astro:content";
 const experiences = await getCollection("experience");
 ---
 
-<section class="mb-10 section-glow">
+<section id="experience" class="mb-10 pt-11 section-glow">
   <h2 class="fade mb-8">Experience</h2>
   <div class="flex wrap gap-12">
     {
