--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -6,7 +6,7 @@ import Icon from "@components/common/Icon.astro";
 import link from "@assets/icons/logo-link-chain-solid.svg?raw";
 ---
 
-<section class="section-intro">
+<section class="section-intro | pt-15">
   <div class="even-columns">
     <div class="intro flow">
       <p>
