--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ const sortedProject = projects.sort(
 );
 ---
 
-<section class="mt-10 section-glow">
+<section id="projects" class="mb-13 pt-11 section-glow">
   <h2 class="fade">Projects</h2>
   <p>I've hacked around few things worth looking at</p>
 
