--- a/src/style/variables/_colors.scss
+++ b/src/style/variables/_colors.scss
@@ -6,9 +6,13 @@ $color-primary-400: hsl(215, 65%, 68%);
 $color-primary-700: hsl(228, 39%, 23%);
 
 //  === Accent ===
-$color-accent-200: hsl(13, 100%, 96%);
-$color-accent-400: hsl(12, 88%, 59%);
-$color-accent-700: hsl(12, 70%, 39%);
+// $color-accent-200: hsl(13, 100%, 96%);
+// $color-accent-400: hsl(12, 88%, 59%); 
+// $color-accent-700: hsl(12, 70%, 39%);
+
+$color-accent-200: hsl(32, 100%, 83%);
+$color-accent-400: hsl(26, 100%, 60%); 
+$color-accent-700: hsl(20, 94%, 48%);
 
 //  === Neutral ===
 $color-neutral-50: hsl(210, 40%, 98%);
