--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,10 @@
 <footer>
   <p class="flex gap-2 center bg-neutral-200 fs-xs fw-semi-bold py-1 mt-10">
-    Designed & built by hadad under <a target="_blank"
+    Designed & built by hadad under <a
+      target="_blank"
       href="https://choosealicense.com/licenses/mit/">MIT</a
-    >, content licensed under <a target="_blank"
+    >, content licensed under <a
+      target="_blank"
       href="https://creativecommons.org/licenses/by-nc-sa/4.0/"
       >CC BY-NC-SA 4.0</a
     >
