--- a/src/style/variables/_colors.scss
+++ b/src/style/variables/_colors.scss
@@ -13,6 +13,8 @@ $color-primary-700: hsl(228, 39%, 23%);
 $color-accent-200: hsl(32, 100%, 83%);
 $color-accent-400: hsl(26, 100%, 60%); 
 $color-accent-700: hsl(20, 94%, 48%);
+$color-accent-900: hsl(16, 100%, 66%);
+
 
 //  === Neutral ===
 $color-neutral-50: hsl(210, 40%, 98%);
