--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,7 +14,7 @@ const {
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="png" href="/favicon.png" />
 <meta name="generator" content={Astro.generator} />
 <title>{title}</title>
 
